--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -455,6 +455,8 @@ obj-$(CONFIG_MACH_M8) += board-m8-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_M8_DUG) += board-m8-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_M8_WHL) += board-m8-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_M8_WL) += board-m8-gpiomux.o board-m8-audio.o
+obj-$(CONFIG_MACH_B2_WLJ) += board-b2-gpiomux.o board-m8-audio.o
+obj-$(CONFIG_MACH_B2_UL) += board-b2-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_EYE_UL) += board-eye-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_MEC_UL) += board-mec-gpiomux.o board-m8-audio.o
 obj-$(CONFIG_MACH_MEC_DWG) += board-mec-gpiomux.o board-m8-audio.o
