--- a/arch/arm/mach-msm/display/Makefile
+++ b/arch/arm/mach-msm/display/Makefile
@@ -4,7 +4,11 @@ obj-$(CONFIG_MACH_M8) += htc_m8-panel.o
 obj-$(CONFIG_MACH_M8_DUG) += htc_m8-panel.o
 obj-$(CONFIG_MACH_M8_WHL) += htc_m8-panel.o
 obj-$(CONFIG_MACH_M8_WL) += htc_m8-panel.o
-
+obj-$(CONFIG_MACH_BAGOSS) += htc_glu-panel.o
+obj-$(CONFIG_MACH_GLU_U) += htc_glu-panel.o
+obj-$(CONFIG_MACH_GLU_WLJ) += htc_glu-panel.o
+obj-$(CONFIG_MACH_B2_WLJ) += htc_b2-panel.o
+obj-$(CONFIG_MACH_B2_UL) += htc_b2-panel.o
 obj-$(CONFIG_MACH_MEM_UL) += htc_mem-panel.o
 
 obj-$(CONFIG_MACH_A5) += htc_a5-panel.o
